@@ -24,6 +24,7 @@ BUG FIXES:
 +Fix frame title not updating correctly when only one tab is open on Linux.
 +Partial fix for screen flashing issue on Linux when using dark syntax
 highlighting themes. Need to turn off code folding to stop the flashing.
++Fix tab context menu option for Close and Close All not working on Linux.
 
 #-----------------------------------------------------------------------------#
 
